kubernetes/prod/prod-idapt-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idapt-backend
spec:
  type: ClusterIP
  ports:
    - name: idapt-backend
      servicePort: 8000
      targetPort: 8000
  selector:
    app-name: idapt-backend
